# oj-judger

./: .clinerules  .gitignore  README.md  build.sh  pyproject.toml  requirements.txt
judger/: __init__.py  cli.py
judger/executor/: __init__.py  config.py  function_extractor.py  function_requirements.py  function_types.py  reporter.py  validate.py
judger/manager/: __init__.py  config.py  distribute.py  models.py
judger/utils/: __init__.py  api_client.py  template_manager.py  token_manager.py
tests/: conftest.py  test_report_executors.py
